[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menus/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/cielo.jpg" type="Texture" id=2]
[ext_resource path="res://Menus/SpicyRiceFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/cespedMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/fuente.tres" type="DynamicFont" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=10]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=12]
default_font = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.501961, 0.501961, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.501961, 0.501961, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.501961, 0.501961, 1 )
border_width_left = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.729412, 0.815686, 0.588235 )
border_blend = true
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 10
shadow_offset = Vector2( 10, 10 )

[sub_resource type="Theme" id=15]
default_font = ExtResource( 5 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Sprite" type="Sprite" parent="MarginContainer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="WindGrass" parent="ViewportContainer/Viewport" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -22.0
margin_right = 89.0
margin_bottom = 22.0
theme = SubResource( 1 )

[node name="level" type="Button" parent="VBoxContainer"]
margin_right = 443.0
margin_bottom = 63.0
theme = SubResource( 2 )
custom_colors/font_color_pressed = Color( 0, 0.8, 1, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
text = "Level Select"

[node name="credits" type="Button" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 443.0
margin_bottom = 130.0
theme = SubResource( 2 )
custom_colors/font_color_pressed = Color( 0, 0.8, 1, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
text = "Credits"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 443.0
margin_bottom = 197.0
theme = SubResource( 2 )
custom_colors/font_color_pressed = Color( 0, 0.8, 1, 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
text = "Exit"

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.6
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -216.0
margin_right = 192.0
margin_bottom = 216.0

[node name="MarginContainer" type="MarginContainer" parent="Popup"]
margin_right = 282.0
margin_bottom = 62.0
custom_constants/margin_top = -50
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/MarginContainer"]
margin_left = 10.0
margin_top = -50.0
margin_right = 292.0
margin_bottom = 42.0

[node name="Button" type="Button" parent="Popup/MarginContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 92.0
theme = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
toggle_mode = true
pressed = true
text = "World 1"

[node name="Button2" type="Button" parent="Popup/MarginContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 282.0
margin_bottom = 92.0
theme = SubResource( 12 )
custom_colors/font_color_disabled = Color( 0.435294, 0.435294, 0.435294, 1 )
custom_styles/pressed = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
disabled = true
toggle_mode = true
pressed = true
text = "World 2"

[node name="ratio" type="AspectRatioContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 1.2

[node name="ColorRect3" type="Panel" parent="Popup/ratio"]
margin_top = 30.0
margin_right = 576.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 11 )

[node name="margin" type="MarginContainer" parent="Popup/ratio"]
margin_top = 30.0
margin_right = 576.0
margin_bottom = 510.0
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="Popup/ratio/margin"]
margin_left = 30.0
margin_top = 50.0
margin_right = 546.0
margin_bottom = 430.0
custom_constants/vseparation = 35
custom_constants/hseparation = 35
columns = 3

[node name="Popup2" type="Popup" parent="."]
anchor_left = 0.6
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -216.0
margin_right = 192.0
margin_bottom = 216.0

[node name="MarginContainer" type="MarginContainer" parent="Popup2"]
margin_right = 282.0
margin_bottom = 62.0
custom_constants/margin_top = -50
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Popup2/MarginContainer"]
margin_left = 10.0
margin_top = -50.0
margin_right = 282.0
margin_bottom = 42.0

[node name="ratio" type="AspectRatioContainer" parent="Popup2"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 1.2

[node name="ColorRect3" type="Panel" parent="Popup2/ratio"]
margin_top = 30.0
margin_right = 576.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 11 )

[node name="margin" type="MarginContainer" parent="Popup2/ratio"]
margin_top = 30.0
margin_right = 576.0
margin_bottom = 510.0
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="Popup2/ratio/margin"]
margin_left = 30.0
margin_top = 50.0
margin_right = 546.0
margin_bottom = 430.0
custom_constants/vseparation = 35
custom_constants/hseparation = 35
columns = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Popup2"]
margin_left = 7.0
margin_top = 85.0
margin_right = 600.0
margin_bottom = 461.0
theme = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "Game created by [b]Alexmp[/b].

Music by [b]a-hitmitsu[/b]
Models by [b]Quaternius[/b]"
text = "Game created by Alexmp.

Music by a-hitmitsu
Models by Quaternius"

[connection signal="pressed" from="VBoxContainer/level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
